Add get customer login info interface
